fixed smooth scroll on Safari

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Create class floating for shadow-box styling */
 
 html {
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
